<resources>
    <string name="app_name">NewProject</string>
    <string name="forgot_your">Forgot your password ?</string>
    <string name="connect_wit">connect with</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="dont_have_a">Dont have account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
</resources>